AUTOMAKE_OPTIONS = foreign
SUBDIRS = src etc doc man scripts tests
ACLOCAL_AMFLAGS = -I m4

# debian files for package building
EXTRA_DIST= \
	debian/ibrdtnd.logrotate \
	debian/ibrdtnd.default \
	debian/compat \
	debian/copyright \
	debian/changelog \
	debian/postinst \
	debian/rules \
	debian/init.d \
	debian/conffiles \
	debian/control \
	debian/docs \
	debian/source \
	debian/source/format

